@@ -1,3 +1,10 @@
+Fri Sep 19 22:49:14 BST 2003  Colin Watson  <cjwatson@debian.org>
+
+	* acinclude.m4 (MAN_CHECK_BDB): Temporarily add $lib to LIBS for
+	  AC_TRY_LINK, not to DBLIBS; but add it to DBLIBS if the test
+	  succeeds.
+	* configure.in: Simply set DBLIBS rather than appending to it.
+
 Fri Sep 19 22:20:07 BST 2003  Colin Watson  <cjwatson@debian.org>
 
 	* autogen.sh: Run aclocal after autopoint, in accordance with the
